Update plugin owner in manifest.json and installation instructions in README.md

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "type": "plugin",
   "runner": "node",
-  "owner": "local",
+  "owner": "richardbenedikt",
   "name": "web-search",
   "revision": 5
 }
